# WebReplication

./: CMakeLists.txt  Log.cpp  Log.h  README.md  fileServerMain.cpp  fileSigner.cpp  fileSigner.sh  filesigner.cpp  main.cpp  proxyMain.cpp  resolverMain.cpp
Client/: ProxyThread.cpp  ProxyThread.h  WebsiteDownloader.cpp  WebsiteDownloader.h
HTTP/: FileServer.cpp  FileServer.h  HttpClientConnection.cpp  HttpClientConnection.h  HttpConnection.cpp  HttpConnection.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  WebsiteDownloader.cpp  WebsiteDownloader.h
Network/: FileVerifier.cpp  NetworkRequest.cpp  NetworkRequest.h  ObjectRequest.cpp  ObjectRequest.h  VerifiedObjectRequest.cpp  VerifiedObjectRequest.h
PSR/: PSR format.md  PsrMessage.cpp  PsrMessage.h  Resolver.cpp  Resolver.h
Server/: FileServer.cpp  ServerDownloader.cpp  ServerDownloader.h  WebsiteDescriptorFormat.md
TCP/: Connection.cpp  Connection.h  ServerConnection.cpp  ServerConnection.h
Utilities/: ConcurrentQueue.cpp  ConcurrentQueue.h  FileVerifier.cpp  FileVerifier.h  IniReader.cpp  IniReader.h  Lockable.h  Log.cpp  Log.h  ProgramFormat.md  WebrdReader.cpp  WebrdReader.h
Vagrant/: Vagrantfile  bootstrap.sh  clonerepo.sh
Vagrant/webr/keys/mywebsite.peer/: private.pem  public.pem
Vagrant/webr/signatures/example.peer/: favicon.ico.sig  index.sig  pagina1.sig
Vagrant/webr/signatures/game.peer/: ball.png.sig  bullet.png.sig  exp1.png.sig  exp2.png.sig  game.js.sig  gun1.png.sig  gun2.png.sig  gun_original.png.sig  gun_original2.png.sig  index.html.sig  missile.png.sig  null.png.sig  pixi.js.sig  sand.png.sig  stand.png.sig  ufo.png.sig
Vagrant/webr/signatures/mywebsite.peer/: 1.jpg.sig  2.jpg.sig  3.jpg.sig  4.jpg.sig  5.jpg.sig  6.jpg.sig  7.jpg.sig  8.jpg.sig  9.jpg.sig  a.jpg.sig  b.jpg.sig  c.jpg.sig  d.jpg.sig  e.jpg.sig  f.jpg.sig  g.jpg.sig  h.jpg.sig  i.jpg.sig  index.html.sig
Vagrant/webr/websites/example.peer/: index  pagina1
Vagrant/webr/websites/game.peer/: game.js  index.html
Vagrant/webr/websites/mywebsite.peer/: index.html
WebRDemo/: WebReplicationDemo.sln
WebRDemo/WebReplicationDemo/: App.config  EntityConnection.cs  Form1.Designer.cs  Form1.cs  Form1.resx  MainForm.Designer.cs  MainForm.cs  MainForm.resx  NetworkEntity.cs  Program.cs  WebReplicationDemo.csproj
WebRDemo/WebReplicationDemo/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs  Settings.settings
test/: testMain.cpp  test_get.sh
